# dialect-map-io

./: .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  scratch.py  setup.cfg  setup.py  terms_file2.csv  text_process.py
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: HPC.md  dataset.md  spark-greene-prepare.sh  spark.md  workspace.md
src/: main.py  text_process.py  textprocess.py  utilities.py
src/auth/: __init__.py  base.py  dummy.py  gcloud.py
src/data_input/: __init__.py  base.py  file_systems.py  local_files.py  remote_apis.py
src/data_output/: __init__.py  base.py  local_files.py  remote_apis.py
src/dialect_map_gcp/: __init__.py
src/dialect_map_gcp/auth/: __init__.py  gcloud.py
src/dialect_map_gcp/data_input/: __init__.py  pubsub.py
src/dialect_map_gcp/handlers/: __init__.py  base.py  pubsub.py
src/dialect_map_gcp/models/: __init__.py  message.py
src/dialect_map_io/: __init__.py  main.py  utilities.py
src/dialect_map_io/auth/: __init__.py  base.py  dummy.py  gcloud.py
src/dialect_map_io/data_input/: __init__.py  local_files.py  pubsub_gcp.py  remote_apis.py
src/dialect_map_io/data_output/: __init__.py  local_files.py  remote_apis.py  remote_routes.py
src/dialect_map_io/encoding/: __init__.py  base.py
src/dialect_map_io/encoding/decoders/: __init__.py  base.py  decoder_binary.py  decoder_json.py  decoder_pdf.py  decoder_plain.py  decoder_text.py
src/dialect_map_io/encoding/encoders/: __init__.py  base.py  encoder_binary.py  encoder_json.py  encoder_pdf.py  encoder_plain.py  encoders_text.py
src/dialect_map_io/handlers/: __init__.py  helpers.py
src/dialect_map_io/handlers/apis/: __init__.py  api_rest.py  base.py
src/dialect_map_io/handlers/files/: __init__.py  base.py  file_binary.py  file_plain.py
src/dialect_map_io/handlers/queues/: __init__.py  base.py
src/dialect_map_io/models/: __init__.py  arxiv.py  feed.py  pubsub.py  routes.py
src/dialect_map_io/nlp/: __init__.py
src/dialect_map_io/parsers/: __init__.py  __utils.py  parsers_data.py  parsers_feed.py  parsers_file.py  parsers_text.py
src/dialect_map_io/parsers/metadata/: __init__.py  feed.py  json.py
src/models/: __init__.py
src/nlp/: base.py  metrics.py
src/parsers/: __init__.py  base.py  parser_pdf.py  parsers_feed.py  parsers_file.py
test/: __paths.py  test_textprocess.py
test/.data/json/: example_data.json  example_error.json
test/auth/: test_gcloud.py
test/data_input/: test_local_files.py
test/parsers/: test_parser_pdf.py  test_parsers_feed.py  test_parsers_file.py
tests/: __paths.py
tests/.data/feed/: arxiv_feed.xml  arxiv_real_feed.xml
tests/.data/json/: example_error.json
tests/.data/txt/: example_arxiv.txt
tests/auth/: test_gcloud.py
tests/data_input/: conftest.py  test_local_files.py  test_pubsub.py  test_pubsub_gcp.py
tests/dialect_map_gcp/handlers/: conftest.py  test_pubsub.py
tests/dialect_map_gcp/models/: test_message.py
tests/dialect_map_io/: __paths.py
tests/dialect_map_io/encoding/decoders/: test_decoder_json.py  test_decoder_pdf.py
tests/dialect_map_io/handlers/files/: test_file_plain.py
tests/encoding/decoders/: test_decoder_plain.py
tests/models/: test_message.py  test_pubsub.py
tests/parsers/: test_parsers_data.py  test_parsers_feed.py  test_parsers_text.py
tests/parsers/metadata/: test_parsers_feed.py  test_parsers_json.py
