[metadata]
name = dialect-map-io
version = file: VERSION
description = Package containing the I/O functionality for the Dialect map jobs
url = https://github.com/dialect-map/dialect-map-io
author = NYU DS3 Team
author_email = sinclert@nyu.edu
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.7, <4.0
install_requires =
    pdfminer.six==20201018
    requests==2.27.1

[options.packages.find]
where = src

[options.extras_require]
gcp =
    google-auth==2.2.1
    google-cloud-pubsub==2.9.0
lint =
    black==22.3.0
    isort==5.10.1
    mypy==0.942
    types-requests~=2.27.0
test =
    pytest==7.1.1
    pytest-cov==3.0.0
all =
    dialect-map-io[gcp]
    dialect-map-io[lint]
    dialect-map-io[test]
    pre-commit==2.17.0
